@@ -386,13 +386,6 @@ class JdepsTask {
             }
         },
 
-        // Another alternative to list modules in --add-modules option
-        new HiddenOption(true, "--include-system-modules") {
-            void process(JdepsTask task, String opt, String arg) throws BadArgs {
-                task.options.includeSystemModulePattern = Pattern.compile(arg);
-            }
-        },
-
         new Option(false, "-P", "-profile") {
             void process(JdepsTask task, String opt, String arg) throws BadArgs {
                 task.options.showProfile = true;
@@ -889,15 +882,11 @@ class JdepsTask {
             if (!ok && !options.nowarning) {
                 reportError("err.missing.dependences");
                 builder.visitMissingDeps(
-                    new Analyzer.Visitor() {
-                        @Override
-                        public void visitDependence(String origin, Archive originArchive,
-                                                    String target, Archive targetArchive) {
+                        (origin, originArchive, target, targetArchive) -> {
                             if (builder.notFound(targetArchive))
                                 log.format("   %-50s -> %-50s %s%n",
                                     origin, target, targetArchive.getName());
-                        }
-                    });
+                        });
             }
             return ok;
         }
@@ -1025,8 +1014,8 @@ class JdepsTask {
 
         // source filters
         builder.includePattern(options.includePattern);
-        builder.includeSystemModules(options.includeSystemModulePattern);
 
+        // target filters
         builder.filter(options.filterSamePackage, options.filterSameArchive);
         builder.findJDKInternals(options.findJDKInternals);
 
@@ -1047,11 +1036,6 @@ class JdepsTask {
         // -filter
         if (options.filterRegex != null)
             builder.filter(options.filterRegex);
-
-        // check if system module is set
-        config.rootModules().stream()
-              .map(Module::name)
-              .forEach(builder::includeIfSystemModule);
 
         return builder.build();
     }
@@ -1166,7 +1150,6 @@ class JdepsTask {
         Set<String> packageNames = new HashSet<>();
         Pattern regex;             // apply to the dependences
         Pattern includePattern;
-        Pattern includeSystemModulePattern;
         boolean inverse = false;
         boolean compileTimeView = false;
         String systemModulePath = System.getProperty("java.home");
@@ -1177,8 +1160,7 @@ class JdepsTask {
         Runtime.Version multiRelease;
 
         boolean hasSourcePath() {
-            return !addmods.isEmpty() || includePattern != null ||
-                        includeSystemModulePattern != null;
+            return !addmods.isEmpty() || includePattern != null;
         }
 
         boolean hasFilter() {
